# cphere

./: Readme.md  briefing.pptx  docker-compose.dev.yml  docker-compose.yml  project-report.docx
backend/: .env  .env.production  .gitignore  Cargo.toml  Dockerfile
backend/src/: constants.rs  lib.rs  main.rs
backend/src/config/: app_config.rs  database.rs  mod.rs
backend/src/handlers/: auth.rs  auth_handler.rs  chat.rs  chat_handler.rs  mod.rs  user_handler.rs  video_call.rs  video_call_handler.rs  ws_handler.rs
backend/src/middleware/: auth_middleware.rs  mod.rs  rate_limiter.rs
backend/src/models/: chat.rs  chat_model.rs  message.rs  message_model.rs  mod.rs  notification.rs  notification_model.rs  session.rs  user.rs  user_model.rs
backend/src/services/: auth.rs  auth_service.rs  chat.rs  chat_service.rs  mod.rs  notification.rs  notification_service.rs  user_service.rs  video_call_service.rs
backend/src/states/: app_state.rs
backend/src/types/: mod.rs  ws_message_types.rs
backend/src/utils/: auth_util.rs  mod.rs  validation_util.rs
backend/src/webrtc/: mod.rs
backend/src/websocket/: mod.rs  session.rs  websocket_session.rs
backend/tests/: unit_tests.rs
backend/tests/unit/: session_tests.rs
backend/tests/unit/handlers/: auth_handler_tests.rs  chat_handler_tests.rs  video_call_handler_tests.rs
backend/tests/unit/middlewares/: rate_limiter_middleware_tests.rs  session_middleware_tests.rs
backend/tests/unit/models/: chat_model_tests.rs  message_model_tests.rs  notification_model_tests.rs  user_model_tests.rs
frontend/: Dockerfile  (+6 more)
(+49 files in other folders)
