[package]
name = "cphere-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.4"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
# Additional crates for integration/acceptance tests can be added here.
