[package]
name = "cphere-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
regex = "1.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-service = "2.0.2"
env_logger = "0.9"
log = "0.4"
lettre = "0.11"

[dev-dependencies]
# Additional crates for integration/acceptance tests can be added here.
actix-rt = "2"
